// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyButton Component ENZYME snapshot 1`] = `<buy-button />`;

exports[`BuyButton Component RENDERER snapshot 1`] = `<buy-button />`;

exports[`BuyButtonContainer Component ENZYME snapshot 1`] = `
<BuyButtonContainer>
  <styled.div>
    <div
      className="sc-bdVaJa gkBsxR"
    >
      <buy-button
        render={false}
        type="pickup"
      />
      <buy-button
        render={false}
        type="cart"
      />
      <p>
        Item Unavailable
      </p>
    </div>
  </styled.div>
</BuyButtonContainer>
`;

exports[`BuyButtonContainer Component RENDERER snapshot 1`] = `
<div
  className="sc-bdVaJa gkBsxR"
>
  <buy-button
    render={false}
    type="pickup"
  />
  <buy-button
    render={false}
    type="cart"
  />
  <p>
    Item Unavailable
  </p>
</div>
`;

exports[`Price Component ENZYME snapshot 1`] = `<price />`;

exports[`Price Component RENDERER snapshot 1`] = `<price />`;

exports[`Product Highlights Component ENZYME snapshot 1`] = `<prouct-highlights />`;

exports[`Product Highlights Component RENDERER snapshot 1`] = `<prouct-highlights />`;

exports[`Promotions Component ENZYME snapshot 1`] = `<promotions />`;

exports[`Promotions Component RENDERER snapshot 1`] = `<promotions />`;

exports[`Quantity Component ENZYME snapshot 1`] = `<quantity />`;

exports[`Quantity Component RENDERER snapshot 1`] = `<quantity />`;

exports[`Returns Component ENZYME snapshot 1`] = `<returns />`;

exports[`Returns Component RENDERER snapshot 1`] = `<returns />`;

exports[`ShareButton Component ENZYME snapshot 1`] = `<share-button />`;

exports[`ShareButton Component RENDERER snapshot 1`] = `<share-button />`;

exports[`ShareContainer Component ENZYME snapshot 1`] = `
<ShareContainer>
  <styled.div>
    <div
      className="sc-bwzfXH fIZIDy"
    >
      <share-button
        text="ADD TO REGISTRY"
      />
      <share-button
        text="ADD TO LIST"
      />
      <share-button
        text="SHARE"
      />
    </div>
  </styled.div>
</ShareContainer>
`;

exports[`ShareContainer Component RENDERER snapshot 1`] = `
<div
  className="sc-bwzfXH fIZIDy"
>
  <share-button
    text="ADD TO REGISTRY"
  />
  <share-button
    text="ADD TO LIST"
  />
  <share-button
    text="SHARE"
  />
</div>
`;
